[package]
name = "psniff-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psniff"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "string"] }
etherparse = "0.19.0"
log = { version = "0.4.28" }
pcap = "2.3.0"
structured-logger = { version = "1.0.5" }
thiserror = { version = "2.0.17" }

[build-dependencies]
built = { version = "0.8.0" }