[package]
name = "psniff-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psniff"
path = "src/bin/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
default = []
channels-console = ["dep:channels-console"]

[dependencies]
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.8" }
channels-console = { version = "0.2.3", optional = true, features=['tokio'] }
clap = { version = "4.5.53", features = ["derive", "string"] }
etherparse = { version = "0.19.0" }
futures = { version = "0.3.31" }
log = { version = "0.4.29" }
pcap = { version = "2.3.0" }
pin-project = { version = "1.1.10" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
structured-logger = { version = "1.0.5" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7.17" }
tower = { version = "0.5.2" }
tower-layer = { version = "0.3.3" }

[build-dependencies]
built = { version = "0.8.0" }

[dev-dependencies]
tun = { version = "0.8.4" }
